# wayfair_nlp_public

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/data/: toydata_products.csv  toydata_reviews.csv
demo/notebooks/: demo_models.ipynb  demo_nlp_feature_extraction.ipynb
src/features/: __init__.py  _returnability.py  _sentiment.py  _topics.py
src/models/: __init__.py  _neural_net_regressor.py  _rf_classifier.py  _rf_regressor.py  metrics.py
